[tool.poetry]
name = "check"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pytest-shutil = "^1.7.0"
pytest = "^7.2.0"
regex = "^2022.10.31"


[tool.poetry.group.dev.dependencies]
regex = "^2022.10.31"


[tool.poetry.group.test.dependencies]
regex = "^2022.10.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
